Atualização da Tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+    <!-- Configuração do versionamento iniciado em 27/08 
+        Nome: Leonardo de oliveira
+        Sistema Qualidade e Produtividade
+        Versão 1.0
+    -->
 <body>
    <header>
        <div>
